# Rust-Party

./: Architecting a Hard Safety Guardrail_ A Phased Fra.md  Layerentity-RustALNartifacts-Roleinthisresearch.csv  README.md  docker-compose.yml
.github/workflows/: rohguard-ci.yml  sovereign-ci.yml  sovereign-specs-ci.yml  tsafe-cortex-gate-ci.yml
.spec/: neurorights.schema.json  tsafe.schema.aln
crates/admin_orchestrator/src/: main.rs
crates/agent-adapter/src/: lib.rs
crates/agent-verse-adapter/src/: lib.rs
crates/ai-shell/: Cargo.toml
crates/ai-shell/src/: lib.rs
crates/cortex-gate/: Cargo.toml
crates/cortex-gate/src/: actions.rs  capabilities.rs  chords.rs  evolve_engine.rs  firewall.rs  gate.rs  llm_client.rs  policy.rs  policy_engine.rs  quantum_envelope_guard.rs  tsafe.rs
crates/eco_guard/src/: lib.rs
crates/eventhd-neuromorph/: Cargo.toml
crates/eventhd-neuromorph/src/: lib.rs
crates/evolve_token_verifier/src/: lib.rs
crates/guardian-eco/src/: lib.rs
crates/guardian-neurorights/src/: lib.rs
crates/guardian-roh/src/: lib.rs
crates/guardian-token/src/: lib.rs
crates/hd5d-core/: Cargo.toml
crates/hd5d-core/src/: lib.rs
crates/hd5d/src/: lib.rs  (+1 more)
crates/neuromorph-ai-shell/: Cargo.toml
crates/neuromorph-runtime/: Cargo.toml
crates/rule-logic/: Cargo.toml
docs/: Why Virtual  Bedbug  Simulations Should Be Prohibited in Augmented-Citizen and Smart-City Stacks.md
neuroworkspace/: neuro-workspace.manifest.aln
policies/: .evolve.jsonl
rust-party/: Cargo.toml
shards/root/: tsafe.aln  vkernel.aln
src/: sovereign_actions.rs
(+55 files in other folders)
